EEVEE Next: Texture paint stroke only showing up after the stroke event ended, makes it feels irresponsive #115786

Closed
opened 2023-12-05 09:15:06 +01:00 by Yusuf Umar · 1 comment

System Information
Operating system: Windows 11
Graphics card: Tested on both modern RX and RTX GPU

Blender Version
Broken: Blender 4.1 with Eevee Next
Worked: any Blender version with Eevee Legacy

Short description of error
Texture painting in Eevee next feels irresponsive due to the stroke only showing up after the stroke session/event ended. It feels more responsive in Eevee legacy. Please look at the comparison video.

Eevee (Legacy) Eevee (Next)

Exact steps for others to reproduce the error
Here's the blend file to test: slow_paint_update.4.10.blend

**System Information** Operating system: Windows 11 Graphics card: Tested on both modern RX and RTX GPU **Blender Version** Broken: Blender 4.1 with Eevee Next Worked: any Blender version with Eevee Legacy **Short description of error** Texture painting in Eevee next feels irresponsive due to the stroke only showing up after the stroke session/event ended. It feels more responsive in Eevee legacy. Please look at the comparison video. | Eevee (Legacy) | Eevee (Next) | | ------------- | ------------- | | <video src="/attachments/5a9b8370-f794-47b5-87e5-2af41b4f810d" title="eevee_legacy.mp4" controls></video> | <video src="/attachments/9c7a4656-2214-48f5-900f-69f943e44739" title="eevee_next.mp4" controls></video> | **Exact steps for others to reproduce the error** Here's the blend file to test: [slow_paint_update.4.10.blend](/attachments/7f847da9-be2e-4c8c-ba47-1eb27db90abc)
Yusuf Umar added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-05 09:15:07 +01:00
Member

Can confirm

Can confirm
Philipp Oeser added
Status
Confirmed
Interest
EEVEE
Module
EEVEE & Viewport
and removed
Status
Needs Triage
labels 2023-12-05 09:28:41 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-05 17:06:46 +01:00
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-12-11 16:07:01 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115786
No description provided.