Fix #115786: EEVEE-Next: Texture paint delayed redraw